eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
.eaton-page-overview .eaton-title__headline { font-family: 'EatonMedium', sans-serif; font-size: 35px; line-height: 40px; }

@media screen and (min-width: 992px) { .eaton-page-overview .eaton-title__headline { font-size: 54px; line-height: 68px; } }

.carousel-component-slide:hover > .carousel-component__arrow { display: block; border: 0; background-image: none; }

.carousel-component-slide__caption { top: 10%; }

.carousel-component-slide__cta { margin-top: 60px; }

.carousel-component-slide__image { width: 100%; }

.carousel-component-slide__text { margin-top: 20px; }

.carousel-component-slide__title { font-size: 3.25em; line-height: 1.192em; margin: 0; }

.carousel-component__dots:only-child { display: none; }

.carousel-component__down-arrow { position: absolute; bottom: 25px; color: #FFF; width: 10%; font-size: 1.5em; z-index: 10; left: 47%; }

.carousel-component__arrow { display: none; }

@media screen and (max-width: 991px) { .carousel-component-slide__caption { top: 0; }
  .carousel-indicators { bottom: 56px; } }

.featured-story-component__content { padding: 60px 40px; }

.featured-story-component__text { color: #FFF; font-size: 2.30em; font-family: "Eaton", Arial, sans-serif; line-height: 1.25em; padding-top: 30px; }

.featured-story-component__arrow { font-size: .70em; left: 10px; }

.featured-story-component__title { font-size: 2.55em; }

.featured-story-component__link:hover, .featured-story-component__link:active, .featured-story-component__link:focus { text-decoration: none; color: #FFF; }

.featured-story-component__blue { position: absolute; top: 0; height: 100%; background-color: #005EB8; color: #FFF; opacity: 0.8; padding: 0; }

.featured-story-component__blue--right { right: 0; }

.featured-story-component__blue--left { left: 0; }

@media screen and (max-width: 991px) { .featured-story-component__blue { position: relative; }
  .featured-story-component__row { padding-bottom: 20px; } }

.eaton-page-overview { padding: 120px 0; }

.eaton-page-overview__title { position: relative; margin-bottom: 60px; padding-bottom: 60px; }

.eaton-page-overview__title::after { content: ''; background-color: #005EB8; bottom: 0; display: block; height: 4px; left: 0; position: absolute; width: 68px; }

@media screen and (max-width: 767px) { .eaton-page-overview__cta { margin-top: 60px; } }

@media screen and (min-width: 992px) { .eaton-page-overview .eaton-title__headline { font-size: 54px; line-height: 68px; } }

.tile-link-component__copy { padding: 60px 0; }

.tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 60px; height: 240px; position: relative; padding: 0; }

.tile-link-component__element:hover, .tile-link-component__element:active, .tile-link-component__element:focus { color: #FFF; text-decoration: none; }

.tile-link-component__element--0 { background-color: #005EB8; margin-left: 0; }

.tile-link-component__element--1 { background-color: #5B6770; }

.tile-link-component__element--2 { background-color: #00B2A9; }

.tile-link-component__element--3 { background-color: #ED8B00; margin-left: 0; }

.tile-link-component__element--4 { background-color: #005EB8; }

.tile-link-component__element--5 { background-color: #333F48; }

.tile-link-component__icon { position: absolute; bottom: 70px; color: #FFF; width: 20%; left: 15px; }

.tile-link-component__image { width: 100%; }

.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 10px 15px; font-size: 2.25em; }

.tile-link-component__title--background { background-color: #333F48; opacity: 0.7; }

.tile-link-component__arrow { font-size: .75em; }

@media screen and (max-width: 991px) { .tile-link-component__element { margin-left: 0; } }

@media screen and (max-width: 767px) { .tile-link-component { margin: 0 15px; } }

@media screen and (min-width: 992px) { .tile-link-component__element { width: 31%; } }

.eaton-ttil-image-list { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }

.eaton-ttil-image-list__item { -ms-flex-preferred-size: 31%; flex-basis: 31%; padding: 0 10px; margin-bottom: 60px; }

@media screen and (max-width: 991px) { .eaton-ttil-image-list { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
  .eaton-ttil-image-list__item { -ms-flex-preferred-size: 100%; flex-basis: 100%; padding: 0 10px; } }

.eaton-ttil-list-category-hero { font-family: "Eaton", Arial, sans-serif; }

.category-hero__header-image { width: 100%; height: auto; }

.category-hero__header-content { position: absolute; top: 20%; color: #FFF; width: 100%; }

.category-hero__header-cta { border: 0; font-size: 1.2em; color: #FFF; }

.category-hero-eye-brown { color: #FFF; }

.category-hero-eye-brown a:hover, .category-hero-eye-brown a:active, .category-hero-eye-brown a:visited, .category-hero-eye-brown a:focus { color: #FFF; text-decoration: none; }

.category-hero-body-copy { color: #FFF; font-size: 1.2em; margin-top: 30px; }

.category-hero__header-title h2 { font-size: 3.5em; margin-top: 30px; margin-bottom: 30px; }

.category-hero-bottomline { background-color: #FFF; height: .3em; width: 4em; }

@media only screen and (max-width: 480px) { .category-hero__header-image { height: 430px; }
  .category-hero__header-content { top: 15%; }
  .category-hero__header-title h2 { font-size: 2em; }
  .category-hero-body-copy { font-size: 1em; }
  .category-hero__header-cta { font-size: 1em; } }

@media only screen and (min-width: 481px) and (max-width: 991px) { .category-hero__header-image { height: 430px; }
  .category-hero__header-content { top: 15%; }
  .category-hero__header-title h2 { font-size: 2.5em; }
  .category-hero-body-copy { font-size: 1.5em; }
  .category-hero__header-cta { font-size: 1.5em; } }

@media only screen and (min-width: 991px) { .category-hero__header-image { min-height: 385px; } }

